--- a/Galilee.html
+++ b/Galilee.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="x-icon" href="galilee.ico.png">
+    <link rel="shortcut icon" type="x-icon" href="Galilee.ico.png">
 	<title>Galilee</title>
 	<style>
         h2{
@@ -26,7 +26,7 @@
 	}
     </style>
 </head>
-<body background="Capture.jpg" style=background-repeat:no-repeat;>
+<body background="Galilee.jpg" style=background-repeat:no-repeat;>
 
     <main>
 		<center><h1>GALILEE ACADEMY</h1>
